(library
 (name zfs)
 (public_name zfs)
 (libraries unix)
 (foreign_stubs
  (language c)
  (names zfs)
  (flags
   :standard
   -include
   /usr/src/sys/contrib/openzfs/include/os/freebsd/spl/sys/ccompile.h)
  (include_dirs
   /usr/src/sys/contrib/openzfs/include
   /usr/src/sys/contrib/openzfs/lib/libspl/include
   /usr/src/sys/contrib/openzfs/lib/libspl/include/os/freebsd)))
