(library
 (name lib)
 (public_name zfs)
 (libraries nvpair str unix)
 (foreign_stubs
  (language c)
  (names util ioctls)
  (flags
   :standard
   -include
   /usr/src/sys/contrib/openzfs/include/os/freebsd/spl/sys/ccompile.h)
  (include_dirs
   /usr/src/sys/contrib/openzfs/include
   /usr/src/sys/contrib/openzfs/lib/libspl/include
   /usr/src/sys/contrib/openzfs/lib/libspl/include/os/freebsd)))
